--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "@nrwl/nx": "6.0.2",
     "@swimlane/ngx-charts": "^7.2.0",
     "angular-pipes": "^7.1.0",
-    "bootstrap": "4.0.0",
+    "bootstrap": ">=4.3.1",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
